test/typescript/openfl/errors/EOFErrorTest.ts
import EOFError from "openfl/errors/EOFError";
var assert = chai.assert;


describe ("TypeScript | EOFError", function () {
	
	
	it ("test", function () {
		
		// TODO: Confirm functionality
		
		var eofError = new EOFError ();
		assert.notEqual (eofError, null);
		
	});
	
	
});